fix: Update Hero height on mobile to fit content

--- a/src/components/layout/hero/hero.style.scss
+++ b/src/components/layout/hero/hero.style.scss
@@ -94,7 +94,7 @@ $hero-max-width: $width-xl + 192;
 
   .container {
     @media screen and (max-width: $width-sm) {
-      height: 340px;
+      height: 370px;
     }
   }
 
